Try to fix scroll issue on mobile #26

--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -166,6 +166,11 @@
     background-color: hsl(240, 10%, 3.9%);
     height: 100%;
   }
+
+  .media-player .media-controls {
+    max-height: 60vh;
+    overflow-y: visible;
+  }
 }
 
 @layer utilities {
